# synthea-neo4j

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml
api/: openai_compat.py  websocket_server.py
api/docs/: question.md
cache/: __init__.py  answer_cache.py
dockers/: docker-compose-neo4j.yml  start-neo4j.sh
docs/: healthgraph_architecture-v1.html  healthgraph_architecture-v2.html  healthgraph_architecture.html  rp_er_diagram.html  rp_knowledge_graph.html  v2_design.md
frontend/: index.html
generator/: README.md  constants.py  csv-converter.py  gen_calls.py  gen_derived.py  gen_dims.py  gen_facts.py  gen_patients.py  gen_supplementary.py  generate_all.py  generator.sh  helpers.py  pyproject.toml  rp_er_diagram.html
generator/input/: birdeye.parquet  campaign_map.parquet  insurance.parquet  location.parquet  patient.parquet  phone_bridge.parquet  rv_inbound.parquet  rv_outbound.parquet  visits.parquet
generator/neo4j_import/: nodes_birdeye.csv  nodes_campaign.csv  nodes_diagnosiscode.csv  (+31 more)
graph/: connection.py  schema_text.py
guardrails/: __init__.py  cypher.py  input.py  output.py
ingest/: fix_ingestion.py  ingestion.py  ingestion_parallel.py  parquet_to_neo4j_csv.py  reconcile_import.py  run-import.sh  schema.py  schema_text.py
memory/: __init__.py  focus.py  rewriter.py  session.py
metadata/: __init__.py  catalog.py  data_dictionary.yaml
notebooks/: parquet_to_neo4j_csv.ipynb
qa/: chain.py  hybrid_retriever.py  llm.py  router.py
semantic/: __init__.py  clustering.py  embeddings.py
(+24 files in other folders)
