[project]
name = "synthea-neo4j-kg"
version = "0.1.0"
description = "Synthea Healthcare Knowledge Graph with Neo4j Aura + LangChain RAG + WebSocket QA"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.20.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=1.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "langchain-neo4j>=0.2.0",
    "jupyterlab>=4.5.8",
    "pyyaml>=6.0",
    "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "rich>=13.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "graph", "ingest", "qa", "metadata", "guardrails", "memory", "cache"]
# include additional top-level files if you want them in the wheel
include = ["README.md", "main.py", "config.py"]
